--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
     "com.gameframex.unity.web": "1.0.0",
     "com.gameframex.unity.network": "1.0.0",
     "com.gameframex.unity.google.protobuf": "1.0.0"
+  },
+  "devDependencies": {
+    "semantic-release": "^24.2.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1"
   }
 }
